@@ -4,15 +4,17 @@ import os
 import click
 from cligj import (
     precision_opt, indent_opt, compact_opt, projection_geographic_opt,
-    projection_mercator_opt, projection_projected_opt, sequence_opt,
+    projection_mercator_opt, projection_projected_opt,
     use_rs_opt, geojson_type_feature_opt, geojson_type_bbox_opt,
     geojson_type_collection_opt)
 
 from .helpers import write_features, to_lower
 import rasterio
+from rasterio.rio import options
 from rasterio.warp import transform_bounds
 
-logger = logging.getLogger('rio')
+
+logger = logging.getLogger(__name__)
 
 
 # Bounds command.
@@ -29,7 +31,7 @@ logger = logging.getLogger('rio')
 @click.option(
     '--dst-crs', default='', metavar="EPSG:NNNN", callback=to_lower,
     help="Output in specified coordinates.")
-@sequence_opt
+@options.sequence_opt
 @use_rs_opt
 @geojson_type_collection_opt(True)
 @geojson_type_feature_opt(False)
